# rgenai

./: CHANGELOG.md  Cargo.toml  README.md
examples/: text.rs
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs
src/bedrock/: image_client.rs  mod.rs  text_client.rs  vector_client.rs
src/models/: common.rs  embedding.rs  image.rs  mod.rs  storage.rs  text.rs
src/storage/: mod.rs  pinecone.rs  postgres.rs  traits.rs  upstash.rs
