[package]
name = "rgenai"
version = "0.1.0"
edition = "2021"
authors = ["Mohammed Aymaan <dev.maan707@gmail.com>"]
description = "RGen is a comprehensive Rust library for AWS Bedrock that provides easy-to-use clients for text generation, image generation, embeddings, and vector storage. Built with performance, type safety, and developer experience in mind."
homepage = "https://github.com/DevMaan707/rgenai"
repository = "https://github.com/DevMaan707/rgenai"
license = "MIT"
documentation = "https://docs.rs/rgenai"
readme = "README.md"

[dependencies]
# AWS SDK
aws-config = "1.0"
aws-sdk-bedrockruntime = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Database support (optional)
tokio-postgres = { version = "0.7", optional = true }
pgvector = { version = "0.3", optional = true }
deadpool-postgres = { version = "0.11", optional = true }

# Logging
log = "0.4"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment
dotenv = "0.15"

# Error handling
thiserror = "1.0"

base64 = "0.21"

# Web server (optional)
actix-web = { version = "4.0", optional = true }

[features]
default = []
postgres = ["tokio-postgres", "pgvector", "deadpool-postgres"]
pinecone = []
upstash = []
storage = ["postgres", "pinecone", "upstash"]
server = ["actix-web"]
